--- a/HelpDesk/views/consulta.html
+++ b/HelpDesk/views/consulta.html
@@ -27,21 +27,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">HelpDesk</a>
+                <a class="navbar-brand" href="#" id="logohelpdesk"><img class="img-responsive" src="img/favicon1.png" alt="logo">&nbsp;&nbsp;HelpDesk</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="../">Início</a></li>
+                    <li><a href="../"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;&nbsp;Início</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li  class="active"><a href="#">Relatórios</a></li>
-                            <li><a href="#">Registros</a></li>
-                            <li><a href="#">Editor</a></li>
+                            <li  class="active"><a href="#"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;&nbsp;Relatórios</a></li>
+                            <li><a href="#"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>&nbsp;&nbsp;Informações</a></li>
+                            <li><a href="#"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>&nbsp;&nbsp;Editor</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Banco de Dados</a></li>
-                    <li><a href="#">Estatisticas</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>&nbsp;&nbsp;Banco de Dados</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;Estatisticas</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Sair</a></li>
