--- a/HelpDesk/views/index.html
+++ b/HelpDesk/views/index.html
@@ -35,8 +35,8 @@
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Menu <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="consulta.html"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;&nbsp;Relatórios</a></li>
-							<li><a href="#"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>&nbsp;&nbsp;Informações</a></li>
-							<li><a href="#"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>&nbsp;&nbsp;Editor</a></li>
+							<li class="disabled"><a href="#"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>&nbsp;&nbsp;Informações</a></li>
+							<li class="disabled"><a href="#"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>&nbsp;&nbsp;Editor</a></li>
 						</ul>
 					</li>
 					<li><a href="#"><span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>&nbsp;&nbsp;Banco de Dados</a></li>
