Correção dos bugs de limpeza dos campos MATRICULA e ID FRESHDESK

--- a/HelpDesk/views/index.html
+++ b/HelpDesk/views/index.html
@@ -87,7 +87,7 @@
 					<div class="form-group col-sm-2">
 						<label for="entrada">Entrada</label>
 						<br>
-						<select class="form-control" name="entrada" id="entrada" ng-model="vm.cadastro.entrada" ng-class="formulario.entrada.$invalid && formulario.entrada.$touched ? 'alteraFocoErro' : ''" ng-options="obj.valor as obj.nome for obj in vm.entrada | orderBy: 'nome'" ng-required="true">
+						<select class="form-control" name="entrada" id="entrada" ng-model="vm.cadastro.entrada" ng-class="formulario.entrada.$invalid && formulario.entrada.$touched ? 'alteraFocoErro' : ''" ng-options="obj.valor as obj.nome for obj in vm.entrada | orderBy: 'nome'" ng-change="vm.limpaIdFreshdesk()" ng-required="true">
 							<option disabled selected value>Selecione uma opção</option>
 						</select>
 					</div>
