Iniciando implementação de consulta ao Banco

--- a/HelpDesk/views/consulta.html
+++ b/HelpDesk/views/consulta.html
@@ -13,12 +13,11 @@
   <script src="/js/app.js"></script>
   <script src="/js/controllers/form-controller.js"></script>
   <link rel="stylesheet" href="/css/style.css">
-  <script src="/js/controllers/consulta-controller.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet" type="text/css"> <!-- Fonte importada do Google -->
   <title>HelpDesk | Consulta</title>
 </head>
 
-<body ng-controller="consultaController as vm">
+<body ng-controller="formController as vm">
     <nav class="navbar navbar-inverse"> <!-- Inicio da Navbar -->
         <div class="container-fluid">
             <div class="navbar-header">
