--- a/HelpDesk/views/login.html
+++ b/HelpDesk/views/login.html
@@ -19,12 +19,12 @@
 
 <body>
   <div class="container">
-    <div class="jumbotron">
+    <div class="login col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4">
 
       <div class="btns"><img src="img/favicon1.png" alt="logo"><h2>HelpDesk</h2></div>
       <form method="post" action="#" role="login">
         <div class="row">
-          <div class="form-group col-md-4 col-md-offset-4">
+          <div class="form-group col-sm-12">
 
             <br>
             <input type="email" name="email" placeholder="E-mail" required class="form-control input-lg"/>
