--- a/HelpDesk/views/login.html
+++ b/HelpDesk/views/login.html
@@ -10,6 +10,8 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> <!-- bootstrap script JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script> <!-- angular script -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script> <!-- Script do Angular Messages -->
+  <script src="/css/dist/js/animsition.min.js"></script> <!-- Transição entre telas -->
+  <link rel="stylesheet" href="/css/dist/css/animsition.min.css"> <!-- Transição entre telas -->
   <script src="/js/app.js"></script>
   <script src="/js/script.js"></script>
   <script src="/js/controllers/login-controller.js"></script>
@@ -17,7 +19,7 @@
   <title>HelpDesk</title>
 </head>
 
-<body ng-controller="loginController as vm">
+<body ng-controller="loginController as vm" class="animsition" data-animsition-in-class="zoom-in-sm" data-animsition-in-duration="1000" data-animsition-out-class="zoom-out-sm" data-animsition-out-duration="800">
   <div class="container">
       <div class="login-box col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <img class="img-responsive img-logohelpdesk-login" src="img/favicon1.png" alt="logo"><h2>HelpDesk</h2>
@@ -36,7 +38,7 @@
               <br>
               <button class="btn btn-success btn-lg btn-block" type="submit" ng-disabled="!formularioLogin.$valid"><span class="glyphicon glyphicon-log-in icon-login-btn" aria-hidden="true"></span>&nbsp;Entrar</button>
               <br>
-              <a href="#">Esqueceu a senha?</a> / <a href="#">Trocar senha</a>
+              <a href="../" class="animsition-link" data-animsition-out-class="fade-out-down-sm" data-animsition-out-duration="2000">Esqueceu a senha?</a> / <a href="#">Trocar senha</a>
             </div>
           </div>
         </form>
