Inclusão do CDN do ANIMSITION na INDEX e CONSULTA também

--- a/HelpDesk/views/index.html
+++ b/HelpDesk/views/index.html
@@ -10,8 +10,8 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> <!-- bootstrap script JS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script> <!-- angular script -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script> <!-- Script do Angular Messages -->
-	<script src="/css/dist/js/animsition.min.js"></script> <!-- Transição entre telas -->
-	<link rel="stylesheet" href="/css/dist/css/animsition.min.css"> <!-- Transição entre telas -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.min.js"></script> <!-- Transição entre telas -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css"> <!-- Transição entre telas -->
 	<script src="/js/app.js"></script>
 	<script src="/js/script.js"></script>
 	<script src="/js/controllers/form-controller.js"></script>
